--- a/db/booth.lpc.html
+++ b/db/booth.lpc.html
@@ -16,15 +16,63 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >add_reg</TD>
+<TD >15</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >12</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >add</TD>
+<TD >24</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >dec_reg2</TD>
+<TD >15</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >12</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >dec_reg</TD>
 <TD >15</TD>
-<TD >2</TD>
 <TD >0</TD>
-<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >12</TD>
-<TD >2</TD>
-<TD >2</TD>
-<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -34,13 +82,13 @@
 <TR >
 <TD >dec_mux</TD>
 <TD >50</TD>
-<TD >38</TD>
+<TD >36</TD>
 <TD >0</TD>
-<TD >38</TD>
+<TD >36</TD>
 <TD >12</TD>
-<TD >38</TD>
-<TD >38</TD>
-<TD >38</TD>
+<TD >36</TD>
+<TD >36</TD>
+<TD >36</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -57,6 +105,22 @@
 <TD >1</TD>
 <TD >1</TD>
 <TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >state_machine</TD>
+<TD >5</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
