--- a/db/booth.lpc.html
+++ b/db/booth.lpc.html
@@ -96,6 +96,22 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >shift_select_input</TD>
+<TD >14</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >dec</TD>
 <TD >9</TD>
 <TD >0</TD>
@@ -114,13 +130,13 @@
 <TR >
 <TD >state_machine</TD>
 <TD >8</TD>
-<TD >2</TD>
 <TD >0</TD>
-<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >11</TD>
-<TD >2</TD>
-<TD >2</TD>
-<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
